--- a/src/main/resources/static/user/mypage/purchase_cancel/css/returnDetail.css
+++ b/src/main/resources/static/user/mypage/purchase_cancel/css/returnDetail.css
@@ -10,7 +10,7 @@
 	margin: 25px 0;
 	padding: 20px 0;
 	background-color: #FAF8FE;
-	border-radius: 10px;
+	border-radius: 20px;
 }
 
 .request-date {
@@ -32,22 +32,24 @@
 }
 
 .page-sub-title {
-	display: flex;
 	font-size: 16px;
-	font-weight: bold;
-	background-color: #FAFAFA;
-	padding: 15px 10px;
-	height: 65px;
-	line-height: 35px;
-	border-radius: 5px;
-	margin-bottom: 10px;
+    font-weight: bold;
+    padding: 15px 10px;
+    height: 65px;
+    line-height: 35px;
+    border-top: 1px solid #000000;
 }
 
-.cancle-book-detail {
+.return-complete-box {
+	margin-top: 60px;
+}
+
+
+.cancel-book-detail {
 	display: flex;
     align-items: center;
-	padding: 15px 30px 15px 20px;
-	border-top: 1px solid #C0C0C0;
+    padding: 15px 30px 15px 40px;
+    border-top: 1px solid #C0C0C0;
 }
 
 .book-info {
@@ -70,7 +72,7 @@
 	color: #7E7E7E;
 }
 
-.cancle-guide-lines-area {
+.cancel-guide-lines-area {
 	margin: 65px 0;
 }
 
@@ -118,7 +120,7 @@
 	gap: 10px;
 }
 
-.cancle-btn {
+.cancel-btn {
 	width: 200px;
 	height: 50px;
 	background-color: #845EC2;
@@ -222,7 +224,7 @@
     padding-right: 30px;
 }
 
-.cancle-price-area {
+.cancel-price-area {
 	width: 50%;
 	display: flex;
     justify-content: space-between;
