--- a/src/main/resources/static/user/mypage/purchase_cancel/css/cancelList.css
+++ b/src/main/resources/static/user/mypage/purchase_cancel/css/cancelList.css
@@ -10,7 +10,7 @@
 	margin: 25px 0;
 	padding: 20px 0;
 	background-color: #FAF8FE;
-	border-radius: 10px;
+	border-radius: 20px;
 }
 
 .request-date {
@@ -42,7 +42,7 @@
 	margin-bottom: 10px;
 }
 
-.cancle-book-detail {
+.cancel-book-detail {
 	display: flex;
     align-items: center;
 	padding: 15px 30px 15px 20px;
@@ -69,7 +69,7 @@
 	color: #7E7E7E;
 }
 
-.cancle-guide-lines-area {
+.cancel-guide-lines-area {
 	margin: 65px 0;
 }
 
@@ -117,7 +117,7 @@
 	gap: 10px;
 }
 
-.cancle-btn {
+.cancel-btn {
 	width: 200px;
 	height: 50px;
 	background-color: #845EC2;
