--- a/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
+++ b/src/main/resources/templates/user/mypage/customer_order/orderDetail.html
@@ -10,7 +10,7 @@
 				<span class="order-purchase-date" th:text="${#dates.format(orderDetails.order_purchase_date, 'yyyy.MM.dd')}"></span>
 			</div>
 			<div class="order-num-wrap">
-				<span>주문번호:</span>
+				<span>주문번호</span>
 				<div class="order-num" th:text="${orderDetails.order_num}"></div>
 			</div>
 		</div>
