--- a/src/main/resources/templates/user/mypage/customer_order/returnDetail.html
+++ b/src/main/resources/templates/user/mypage/customer_order/returnDetail.html
@@ -106,7 +106,7 @@
 		</div>
 	</div>
 	<div class="refund-area">
-		<div>
+		<div class="refund-title-area">
 			<span class="refund-title">환불정보</span>
 		</div>
 		<div class="refund-info-area">
