--- a/src/main/resources/static/user/mypage/purchase_cancel/css/cancelCompletion.css
+++ b/src/main/resources/static/user/mypage/purchase_cancel/css/cancelCompletion.css
@@ -23,17 +23,18 @@
 
 .request-date > span {
 	border-right: 1px solid #C0C0C0;
-	padding-right: 10px;
+    margin-right: 15px;
+    padding-right: 20px;
 }
 
 .request-order-num > span {
-	padding-left: 10px;
 	color: #000000;
+	font-weight: 300;
 }
 
 .page-sub-title {
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: 600;
 	padding: 15px 10px;
 	height: 65px;
 	line-height: 35px;
@@ -52,13 +53,13 @@
     flex-direction: column;
     justify-content: space-between;
 	height: 47px;
-	margin-left: 10px;
+	margin-left: 20px;
 	margin-right: auto;
 }
 
 .book-name, .book-price {
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #000000;
 }
 
@@ -83,8 +84,7 @@
 
 .order_status {
 	color: #845EC2;
-	font-size: 14px;
-	font-weight: bold;
+	font-weight: 600;
 	margin-left: 50px;
 }
 
@@ -96,11 +96,15 @@
 	margin: 60px 0 65px 0;
 }
 
+.refund-title-area {
+	border-bottom: 1px solid;	
+}
+
 .refund-title {
 	height: 50px;
 	line-height: 50px;
 	font-size: 20px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #000000;
 }
 
@@ -108,9 +112,8 @@
 	display: flex;
 	padding: 30px 20px;
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #000000;
-	border-top: 1px solid #C0C0C0; 
 	border-bottom: 1px solid #C0C0C0; 
 }
 
