--- a/src/main/resources/static/user/mypage/purchase_cancel/css/returnDetail.css
+++ b/src/main/resources/static/user/mypage/purchase_cancel/css/returnDetail.css
@@ -1,6 +1,6 @@
 .page-title {
 	font-size: 20px;
-	font-weight:  bold;
+	font-weight: bold;
 }
 
 .order-info-area {
@@ -21,49 +21,48 @@
 	color: #000000;
 }
 
-.request-date > span {
+.request-date>span {
 	border-right: 1px solid #C0C0C0;
 	padding-right: 10px;
 }
 
-.request-order-num > span {
+.request-order-num>span {
 	padding-left: 10px;
 	color: #000000;
 }
 
 .page-sub-title {
 	font-size: 16px;
-    font-weight: bold;
-    padding: 15px 10px;
-    height: 65px;
-    line-height: 35px;
-    border-top: 1px solid #000000;
+	font-weight: 600;
+	padding: 15px 10px;
+	height: 65px;
+	line-height: 35px;
+	border-top: 1px solid #000000;
 }
 
 .return-complete-box {
 	margin-top: 60px;
 }
 
-
 .cancel-book-detail {
 	display: flex;
-    align-items: center;
-    padding: 15px 30px 15px 40px;
-    border-top: 1px solid #C0C0C0;
+	align-items: center;
+	padding: 15px 30px 15px 40px;
+	border-top: 1px solid #C0C0C0;
 }
 
 .book-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 47px;
-    margin-left: 10px;
-    margin-right: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 47px;
+	margin-left: 20px;
+	margin-right: auto;
 }
 
 .book-name, .book-price {
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #000000;
 }
 
@@ -139,18 +138,16 @@
 	color: #845EC2;
 	font-size: 16px;
 	font-weight: bold;
-	
 }
 
-.modal-text > p {
+.modal-text>p {
 	line-height: 1;
 }
 
 .check-btn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .selected-count-area {
@@ -158,10 +155,10 @@
 }
 
 .input-count {
-	position: relative;	
+	position: relative;
 }
-	
-.input-count > input {
+
+.input-count>input {
 	width: 80px;
 	height: 30px;
 	border: 1px solid #C0C0C0;
@@ -187,7 +184,7 @@
 	display: flex;
 }
 
-.return-count-input-area > span {
+.return-count-input-area>span {
 	line-height: 30px;
 	margin-right: 5px;
 	font-size: 14px;
@@ -202,33 +199,36 @@
 	height: 50px;
 	line-height: 50px;
 	font-size: 20px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #000000;
+}
+
+.refund-title-area {
+	border-bottom: 1px solid;
 }
 
 .refund-info-area {
 	display: flex;
 	padding: 30px 20px;
 	font-size: 16px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #000000;
-	border-top: 1px solid #C0C0C0; 
-	border-bottom: 1px solid #C0C0C0; 
+	border-bottom: 1px solid #C0C0C0;
 }
 
 .refund-price-area {
 	width: 50%;
-    display: flex;
-    justify-content: space-between;
-    border-right: 1px solid #C0C0C0;
-    padding-right: 30px;
+	display: flex;
+	justify-content: space-between;
+	border-right: 1px solid #C0C0C0;
+	padding-right: 30px;
 }
 
 .cancel-price-area {
 	width: 50%;
 	display: flex;
-    justify-content: space-between;
-    padding-left: 30px;
+	justify-content: space-between;
+	padding-left: 30px;
 }
 
 .refund-guide-area {
@@ -248,26 +248,22 @@
 .info-title-area {
 	height: 50px;
 	font-size: 20px;
-	font-weight: bold;
+	font-weight: 600;
 	line-height: 50px;
-	margin-top: 25px;
+	margin-top: 60px;
+	border-bottom: 1px solid;
 }
 
 .detail-info-area {
-    display: flex;
-	padding: 28px 20px;
-	border-top: 1px solid #C0C0C0;
-	border-bottom: 1px solid #C0C0C0;
-}
-
-.detail-info-area {
-	display: flex;	
+	display: flex;
+	gap: 100px;
+	padding: 28px 40px;
+	border-bottom: solid 1px #c0c0c0;
 }
 
 .info-sub-title-area {
 	font-size: 16px;
 	font-weight: bold;
-	margin-right: 100px;
 	color: #000000;
 }
 
@@ -278,7 +274,7 @@
 }
 
 .name {
-    line-height: 25px;
+	line-height: 25px;
 }
 
 .user-info-font {
@@ -350,11 +346,10 @@
 
 .order_status {
 	color: #845EC2;
-	font-size: 14px;
-	font-weight: bold;
+	font-weight: 600;
 	margin-left: 50px;
 }
 
-.user-info > div:not(:last-child) {
+.user-info>div:not(:last-child) {
 	margin-bottom: 14px;
 }
