--- a/src/main/resources/templates/user/mypage/customer_order/cancelCompletion.html
+++ b/src/main/resources/templates/user/mypage/customer_order/cancelCompletion.html
@@ -75,7 +75,7 @@
 	</div>
 	
 	<div class="refund-area">
-		<div>
+		<div class="refund-title-area">
 			<span class="refund-title">환불정보</span>
 		</div>
 		<div class="refund-info-area">
