--- a/src/main/resources/templates/mobile/myinfo/myinfo.html
+++ b/src/main/resources/templates/mobile/myinfo/myinfo.html
@@ -17,13 +17,13 @@
 			
 			
 			<label for="input-pw" class="sub-title">새 비밀번호</label>
-			<div>
+			<div class="input-pw-box">
 				<input type="password" id="input-pw" name="manager_pw" class="input-pw">
 				 <p id="error-pw-val" class="error-message" style="display: none;">비밀번호는 특수문자, 영문자, 숫자를 포함하여<br>최소 8자 이상이어야 합니다.</p>
 			</div>
 			
 			<label for="input-pw-ch" class="sub-title">새 비밀번호 확인</label>
-			<div>
+			<div class="input-pw-box">
 				<input type="password" id="input-pw-ch" class="input-pw">
 				<p id="error-pw-ch" class="error-message" style="display: none;">비밀번호가 일치하지 않습니다.</p>
 			</div>
