--- a/src/main/resources/templates/mobile/sample/sample.html
+++ b/src/main/resources/templates/mobile/sample/sample.html
@@ -76,7 +76,7 @@
 <!-- 버튼 -->
 <button class="back-btn">
     <i class="fa-solid fa-chevron-left"></i>
-    <p class="menu-title">입고하기</p>
+    입고하기
 </button>
 
 <button class="default-btn export">
