--- a/src/main/resources/static/mobile/common/css/common.css
+++ b/src/main/resources/static/mobile/common/css/common.css
@@ -1,5 +1,6 @@
 .mobile-frame {
     padding: 1.5rem 1.5rem 0;
+    margin-bottom: 10rem;
 }
 
 .mobile-inner {
@@ -26,6 +27,10 @@
     align-items: center;
 }
 
+.content-list.deliver-state {
+    grid-template-columns: 15rem auto 5rem;
+}
+
 .content-text-wrap {
     display: flex;
     flex-direction: column;
@@ -38,6 +43,8 @@
     left: 0;
     bottom: 0;
     background-color: #ffffff;
+    padding: 2rem 1rem 1rem;
+    border-top: 1px solid #ededed;
 }
 
 .menu-list {
@@ -215,8 +222,13 @@ input[type='number'] {
     appearance: none;
 }
 
+.input-pw-box {
+    min-width: 5rem;
+    width: 100%;
+}
+
 .input-pw {
-	width: 15rem;
+	width: 100%;
     height: 3rem;
     border: 1px solid #C0C0C0;
     border-radius: .5rem;
@@ -333,8 +345,8 @@ select::-ms-expand {
 
 .myinfo {
 	display: grid; 
-	grid-template-columns: 10rem 1fr; 
-	gap: 3rem; 
+	grid-template-columns: 10rem auto;
+	gap: 1rem;
 	align-items: center;
 }
 
