Fix: 사용자 페이지 1:1 문의 필수값 해제

--- a/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
@@ -234,3 +234,12 @@ select:focus {
 	top: 0;
 	left: 10;
 }
+
+.input-box-long {
+    width: 340px;
+    height: 45px;
+    border: 1px solid #C0C0C0;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 16px;
+}
