--- a/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
+++ b/src/main/resources/templates/user/mypage/inquiries/inquiriesReg.html
@@ -88,7 +88,7 @@
 		<p class="sub-title-font" style="margin-top: 20px;">문의에 대한 답변 등록 시 알려드립니다.</p>
 		<div class="email-container">
 			<p class="sub-title-font">이메일</p>
-			<input type="text" id="inquiryEmail" class="input-long" style="border-radius: 5px; background-color: #EBECF0; pointer-events: none;" readonly>
+			<input type="text" id="inquiryEmail" class="input-box-long" style="border-radius: 5px; background-color: #EBECF0; pointer-events: none;" readonly>
 		</div>
 	
 		<div class="btn-box">
