--- a/src/main/resources/static/mobile/dispatch/css/dispatch.css
+++ b/src/main/resources/static/mobile/dispatch/css/dispatch.css
@@ -9,25 +9,15 @@
 }
 
 .inventoryQty {
-	width: 6rem;
+    text-align: end;
 }
 
 .content-dispatch-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     align-items: center; /* 체크박스와 텍스트를 수직 중앙 정렬 */
-    margin-bottom: 1rem; /* 항목 간의 간격 추가 */
     border-bottom: 1px solid #D8D8D8;
-    padding-bottom: 1rem;
-}
-
-
-.content-text-wrap {
-    flex: 1; /* 텍스트 부분이 남은 공간을 차지 */
-    padding-left: 10px; /* 체크박스와 텍스트 사이에 여백 */
-}
-
-.content-text-wrap p {
-    margin: 0; /* 기본 여백 제거 */
+    padding: 1.5rem 1rem;
 }
 
 input[type="checkbox"] {
