--- a/src/main/resources/templates/mobile/dispatch/dispatch.html
+++ b/src/main/resources/templates/mobile/dispatch/dispatch.html
@@ -33,7 +33,7 @@
 받아 서치한후 리스트 출력 (제목, isbn, 날짜, 수량(내가 입력할수있어야함 그러나 이미 들어있는 갯수를 넘어가면 안됨) 
 완료 버튼 누르면 출고 완료) -->
 	<form id="dispatchForm" action="/mobile/admin/dispatch-items" method="POST">
-        <div class="white-frame scroll" style="height: 22rem">
+        <div class="white-frame scroll" style="height: 25rem; margin-bottom: 3rem;">
             <p class="sub-title"><span id="zone-num-display"></span></p>
             <div id="dispatch-list"></div>
         </div>
