--- a/src/main/resources/templates/mobile/sample/sample.html
+++ b/src/main/resources/templates/mobile/sample/sample.html
@@ -170,6 +170,6 @@
 <p class="content-text">당신이 누군가를 죽였다</p>
 <p class="content-sub-txt">등록날짜: 2024-01-01</p>
 
-<script src="/mobile/common/js/sample.js"></script>
+<script src="/mobile/common/js/main.js"></script>
 </body>
 </html>
