--- a/src/main/resources/templates/mobile/common/layout/mobilelayout.html
+++ b/src/main/resources/templates/mobile/common/layout/mobilelayout.html
@@ -13,7 +13,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="/mobile/common/js/sample.js"></script>
+<script src="/mobile/common/js/main.js"></script>
 <script src="/user/common/js/pagination.js"></script>
 </body>
 </html>
