--- a/src/main/resources/templates/mobile/home/delivery_status.html
+++ b/src/main/resources/templates/mobile/home/delivery_status.html
@@ -32,7 +32,7 @@
 			</div>
 			<div>
 				<p class="content-text" style="text-align: center;">
-					<span th:text="'주소 : ' + ${item.order_addr}"></span><br>
+					<span th:text="${item.order_addr}"></span><br>
 					<span th:text="${item.order_addr_detail}"></span>
 				</p>			
 			</div>
