--- a/src/main/resources/templates/admin/products/products.html
+++ b/src/main/resources/templates/admin/products/products.html
@@ -77,7 +77,7 @@
     <div class="table-title-wrap">
         <h3 class="table-data-cnt-txt" id="totalCount"></h3>
         <div class="button-wrap">
-            <button id="delete-button">목록에서 숨김</button>
+            <button id="delete-button">삭제</button>
             <button class="default-btn" onclick="location.href='/admin/products/register'">등록</button>
         </div>
     </div>
