Design: 모바일 css 수정

--- a/src/main/resources/templates/mobile/myinfo/myinfo.html
+++ b/src/main/resources/templates/mobile/myinfo/myinfo.html
@@ -12,30 +12,30 @@
     <div class="white-frame home-first-menu">
 		<div class="myinfo">
 		
-			<p class="sub-title">아이디</p>
+			<p class="myinfo-sub-title">아이디</p>
 			<p class="content-text" th:text="${manager.manager_id}"></p>
 			
 			
-			<label for="input-pw" class="sub-title">새 비밀번호</label>
+			<label for="input-pw" class="myinfo-sub-title">새 비밀번호</label>
 			<div class="input-pw-box">
 				<input type="password" id="input-pw" name="manager_pw" class="input-pw">
 				 <p id="error-pw-val" class="error-message" style="display: none;">비밀번호는 특수문자, 영문자, 숫자를 포함하여<br>최소 8자 이상이어야 합니다.</p>
 			</div>
 			
-			<label for="input-pw-ch" class="sub-title">새 비밀번호 확인</label>
+			<label for="input-pw-ch" class="myinfo-sub-title">새 비밀번호 확인</label>
 			<div class="input-pw-box">
 				<input type="password" id="input-pw-ch" class="input-pw">
 				<p id="error-pw-ch" class="error-message" style="display: none;">비밀번호가 일치하지 않습니다.</p>
 			</div>
 			
-			<p class="sub-title">이름</p>
+			<p class="myinfo-sub-title">이름</p>
 			<p class="content-text" th:text="${manager.manager_name}"></p>
 			
 			
-			<p class="sub-title">전화번호</p>
+			<p class="myinfo-sub-title">전화번호</p>
 			<div>
 				<div class="myinfo-phone">
-					<div class="select-wrap-und" style="width:5rem">
+					<div class="select-wrap-und">
 					    <select name="countryNum" id="countryNum">
 					        <option th:each="number : ${countryNums}"
 	               		    		th:value="${number}"
