--- a/src/main/resources/static/mobile/common/css/common.css
+++ b/src/main/resources/static/mobile/common/css/common.css
@@ -18,6 +18,11 @@
     overflow: hidden;
 }
 
+select:focus, input:focus {
+    outline: none;
+    border: 1px solid #666;
+}
+
 .content-list {
     height: 6rem;
     padding: 1.5rem 1rem;
@@ -28,14 +33,25 @@
 }
 
 .content-list.deliver-state {
-    height: 8rem;
-    grid-template-columns: 15rem auto 5rem;
+    height: 11rem;
+    /*grid-template-columns: 12rem auto 4.5rem;*/
+    display: block;
 }
 
 .content-text-wrap {
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.content-text-wrap.top {
+    flex-direction: row;
+    margin-bottom: 10px;
+}
+
+.deliver-info > p:first-child {
+    font-weight: 700;
+    margin-bottom: .5rem;
 }
 
 /* 하단 탭바 */
@@ -231,13 +247,14 @@ input[type='number'] {
 .input-pw {
 	width: 100%;
     height: 3rem;
+    padding: 0 0.8rem;
     border: 1px solid #C0C0C0;
     border-radius: .5rem;
 }
 
 /* 전화번호 셀렉박스 */
 select {
-	width: 5rem;
+	min-width: 5rem;
     height: 3rem;
     padding: 0 .5rem;
     appearance: none;
@@ -252,7 +269,6 @@ select::-ms-expand {
 
 .select-wrap-und {
     position: relative;
-    width: 5rem;
 }
 
 .search-list-subject-symbol {
@@ -262,18 +278,19 @@ select::-ms-expand {
 .fa-sort {
     position: absolute;
     top: 50%;
-    left: 36px;
+    left: calc(100% - 15px);
     transform: translateY(-50%);
 }
 
 /* 나머지 전화번호 */
 .phone-num {
-    width: 5rem;
+    min-width: 5rem;
     height: 3rem;
+    padding: 0 .8rem;
     border: 1px solid #C0C0C0;
     border-radius: .5rem;
     font-size: 1.4rem;
-    padding: 0 .8rem
+    text-align: center;
 }
 
 /* 프레임 */
@@ -331,12 +348,17 @@ select::-ms-expand {
 }
 
 .sub-title {
+    margin-bottom: 1.5rem;
     font-size: 1.4rem;
     font-weight: 700;
 }
 
 .content-text {
     font-size: 1.2rem;
+}
+
+.content-text.deliver-state {
+    margin: 1rem 0 2rem;
 }
 
 .content-sub-txt {
@@ -354,7 +376,13 @@ select::-ms-expand {
 .myinfo-phone {
 	display: flex;
 	align-items: center;
-	gap: 1rem;
+	gap: .5rem;
+}
+
+.myinfo-sub-title {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: #666;
 }
 
 .success-message {
