Fix: 관리자 데쉬보드 매출 표기 및 매니저관리의 부서컬럼 인사팀 데이터 미표기 현상 수정

--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -92,7 +92,7 @@
 				<input type="text" id="address_kakao" name="manager_addr" class="gray-text pointer-cursor" readonly />
 			</div>
 			<div class="info">
-				<span class="search-list-subject important">상세주소</span>
+				<span class="search-list-subject">상세주소</span>
 				<input type="text" id="manager_detail_addr" name="manager_detail_addr" onclick="this.value='';" class="gray-text" />
 			</div>
 			
