--- a/src/main/resources/templates/user/mypage/customer_order/orderList.html
+++ b/src/main/resources/templates/user/mypage/customer_order/orderList.html
@@ -95,7 +95,7 @@
 					<span class="order_delivery_status" th:text="${item.order_detail_status != '주문완료' ? '-' : item.order_delivery_status}"></span>
 					<div class="history-table-item request-button" th:if="${item.order_delivery_status == '배송전' && item.order_detail_status == '주문완료'}">
 						<button class="default-btn border return-cancel-btn" th:data-order-num="${item.order_num}" 
-				        onclick="location.href='/' + 'user/mypage/cancleList?orderNum=' + this.dataset.orderNum">취소</button>
+				        onclick="location.href='/' + 'user/mypage/cancelList?orderNum=' + this.dataset.orderNum">취소</button>
 					</div>
 					<div class="history-table-item request-button" th:if="${item.order_delivery_status == '배송완료' && item.order_detail_status == '주문완료'}">
 						<button class="default-btn border return-cancel-btn" th:data-order-num="${item.order_num}" 
